# dream-engine

./: .gitignore  CMakeLists.txt  README.md
api/engine/: core.h  ui.h
core/: application.h  camera.cpp  camera.h  collision.cpp  collision.h  copyable.h  font.cpp  font.h  geometry.cpp  identifiable.h  interactable.h  logger.h  logo.h  renderable.h  resource.cpp  resource.h  scene.cpp  scene.h  state.cpp  symbols.h  vector2.cpp  video.cpp
core/include/: animation.h  application.h  camera.h  collision.h  copyable.h  font.h  geometry.h  logger.h  logo.h  mathematics.h  object.h  observable.h  renderable.h  resource.h  scene.h  singleton.h  state.h  symbols.h  texture.h  timer.h  transform.h  updatable.h  vector2.h  video.h
core/src/: animation.cpp  application.cpp  camera.cpp  collision.cpp  font.cpp  geometry.cpp  logger.cpp  logo.cpp  resource.cpp  scene.cpp  singleton.cpp  state.cpp  texture.cpp  timer.cpp  transform.cpp  vector2.cpp  video.cpp
docs/: Animation.md  Application.md  Camera.md  Color.md  Copyable.md  FiniteStateMachine.md  Font.md  FontRepresentable.md  FontWrapper.md  GameObject.md  GeometryProxy.md  Identifiable.md  Interactable.md  Logger.md  Mathematics.md  README.md  Renderable.md  ResourceManager.md  Scene.md  SceneManager.md  Singleton.md  State.md  TextureRepresentable.md  TextureSequence.md  Timer.md  Transform.md  Updatable.md  Vector2.md  VideoDecoder.md  VideoRepresentable.md  VideoWrapper.md  WindowConfiguration.md
docs/core/: Animation.md  Application.md  Camera.md  CollisionBox.md  CollisionManager.md  Copyable.md  FontRepresentable.md  GameObject.md  GeometryProxy.md  Identifiable.md  Interactable.md  Logger.md  Observable.md  Observer.md  Renderable.md  ResourceManager.md  Scene.md  SceneManager.md  Singleton.md  State.md  TextureRepresentable.md  TextureSequence.md  Timer.md  Updatable.md  Vector2.md  WindowConfiguration.md
docs/ui/: Alignment.md  BarView.md  Color.md  EdgeInsets.md  View.md
example/: main.cpp
example/include/: executable.h  index.h  input.h  sword.h
example/revenants/: CMakeLists.txt
example/revenants/config/: window.config
example/revenants/include/: boundary.h  character.h  damage.h  ember.h  index.h  lord.h
example/revenants/resources/: .dreamengine.manifest
example/revenants/src/: character.cpp  damage.cpp  ember.cpp  executable.cpp  lord.cpp
example/src/: executable.cpp  sword.cpp
ui/: alignment.h  bar.cpp  bar.h  color.cpp  color.h  edge.h  view.h
